--- a/values.yaml
+++ b/values.yaml
@@ -1,6 +1,14 @@
 ---
 image:
   repository: gcr.io/planet-4-151612/robots
-  tag: v0.1
+  tag: build-local
 pagespeed:
   enabled: false
+openresty:
+  geoip:
+    enabled: true
+    maxmind:
+      accountid: MTQ2NTIwCg==
+      license: dHNEeWp2d1VSaXZERUs0Rgo=
+  cloudflare:
+    enabled: false
