--- a/values.yaml
+++ b/values.yaml
@@ -4,3 +4,11 @@ image:
   tag: v0.1
 pagespeed:
   enabled: false
+
+openresty:
+  geoip:
+    enabled: true
+    accountid: ""
+    license: ""
+  cloudflare:
+    enabled: false
