--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -140,4 +140,4 @@ workflows:
             branches:
               ignore: /.*/
             tags:
-              only: /^v.*/
+              only: /^v\p{Digit}+\.\p{Digit}+\.\p{Digit}+.*/
