--- a/env/dev/values.yaml
+++ b/env/dev/values.yaml
@@ -1,15 +1,6 @@
 ---
-hostname: k8s.p4.greenpeace.org
+hostname: www-dev.greenpeace.org
 ingress:
   hosts:
-    - name: www-dev.greenpeace.org
-    - name: dev.p4.greenpeace.org
-
-nginxingress:
-  hosts:
     - name: k8s.p4.greenpeace.org
-      tls: false
-    - name: www-dev.greenpeace.org
-      tls: false
     - name: dev.p4.greenpeace.org
-      tls: false
