--- a/env/prod/values.yaml
+++ b/env/prod/values.yaml
@@ -1,21 +1,8 @@
 ---
-hostname: master.k8s.p4.greenpeace.org
+hostname: www.greenpeace.org
 ingress:
   hosts:
     - name: release.k8s.p4.greenpeace.org
     - name: prod.p4.greenpeace.org
     - name: release.p4.greenpeace.org
     - name: prod.nginx.p4.greenpeace.org
-
-nginxingress:
-  hosts:
-    - name: master.k8s.p4.greenpeace.org
-      tls: false
-    - name: release.k8s.p4.greenpeace.org
-      tls: false
-    - name: prod.p4.greenpeace.org
-      tls: false
-    - name: release.p4.greenpeace.org
-      tls: false
-    - name: prod.nginx.p4.greenpeace.org
-      tls: false
