--- a/env/dev/values.yaml
+++ b/env/dev/values.yaml
@@ -1,6 +1,9 @@
 ---
-hostname: www-dev.greenpeace.org
+hostname: k8s.p4.greenpeace.org
 ingress:
   hosts:
-    - name: k8s.p4.greenpeace.org
     - name: dev.p4.greenpeace.org
+nginxingress:
+  hosts:
+      - name: dev.p4.greenpeace.org
+        tls: true
