--- a/env/prod/values.yaml
+++ b/env/prod/values.yaml
@@ -1,8 +1,18 @@
 ---
-hostname: www.greenpeace.org
+hostname: master.k8s.p4.greenpeace.org
 ingress:
   hosts:
     - name: release.k8s.p4.greenpeace.org
     - name: prod.p4.greenpeace.org
     - name: release.p4.greenpeace.org
     - name: prod.nginx.p4.greenpeace.org
+nginxingress:
+  hosts:
+    - name: release.k8s.p4.greenpeace.org
+      tls: true
+    - name: prod.p4.greenpeace.org
+      tls: true
+    - name: release.p4.greenpeace.org
+      tls: true
+    - name: prod.nginx.p4.greenpeace.org
+      tls: true
