Setup tls for unused domain
This prevents indexing and shouldn't be required going into the future.

--- a/env/prod/values.yaml
+++ b/env/prod/values.yaml
@@ -16,3 +16,5 @@ nginxingress:
       tls: true
     - name: prod.nginx.p4.greenpeace.org
       tls: true
+    - name: master.k8s.p4.greenpeace.org
+      tls: true
