Update paths for prod

--- a/env/prod/values.yaml
+++ b/env/prod/values.yaml
@@ -1,5 +1,6 @@
 ---
 hostname: master.k8s.p4.greenpeace.org
+hostpath: robots.txt
 ingress:
   hosts:
     - name: release.k8s.p4.greenpeace.org
@@ -10,11 +11,16 @@ nginxingress:
   hosts:
     - name: release.k8s.p4.greenpeace.org
       tls: true
+      path: robots.txt
     - name: prod.p4.greenpeace.org
       tls: true
+      path: robots.txt
     - name: release.p4.greenpeace.org
       tls: true
+      path: robots.txt
     - name: prod.nginx.p4.greenpeace.org
       tls: true
+      path: robots.txt
     - name: master.k8s.p4.greenpeace.org
       tls: true
+      path: robots.txt
